[package]
name = "multipack"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenv = "0.15.0"
reqwest = "0.12.23"
serde = "1.0.227"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zip = { version = "5.1.1", features = ["deflate"] }
